Development
    Make window resize correctly when playlist is hidden
    Make notification work again
0.9.2
    Updated Polish Translation
    Updated French Translation
    If mixer not found, fall back to Master
    Add the passed in --mixer option to the drop down in preferences and set it to default
    Add the requirement of playback volume to a possible mixer
    Add a 'blank' option to the mixer channel, to select no mixer and leave it to the defaults 
    If we compile with alsa support then exclude default volume code
    Add support for mixers with and without indexes
    Add setting of mixer device via the GUI
    Unset mixer internally if it can't be found.
    Add command line option --mixer and use that for volume control
    Fix problem with preferences not being saved due to missing config directory
    Don't create cover art cache directory when disable fetch is enabled
    Bump autoplay restart from +10% to +20%.
    Add -nocache command line option to mplayer when playing from plugin
    Fix case in autopause code where g_stat was being passed a URI instead of a filename
    Only show the media_label if there is something to show
    Switch to playlist view after Loading iPod tracks
    Rework autopause detection
    Update Korean Translation
    When switching subtitles via the J key, update the subtitle menu with the active language
    When video is displayed, make sure info and detail panels don't shrink the video
    When switching from audio only to video file, allow screen resize due to video size
    Save visibility of detail and info panels on go/return from fullscreen
    Reset chapter flag when switching media
    Fix playlist parsing for shoutcast files, and speed it up
    Fix streaming_media detection a little more
    Updated Turkish translation
    Rework streaming_media detection, seems to cause problems when using GIO and large http files
    Fix GTK Assertion in config_apply
    Set title to DVD when DVD title is not found