@@ -1,4 +1,5 @@
 Development
+    Start switching from requistion size to allocation size for some widgets
     Make window resize correctly when playlist is hidden
     Make notification work again
 0.9.2
